# codecarbon-mcp

./: .gitignore  LICENSE  README.md  __init__.py  analysis.py  client.py  credentials.json  main.py  pyproject.toml  requirements.txt  server.py
example/: api_login.py
examples/: basic_usage.py
src/mcp_remote_run/: __init__.py  injector.py
tests/: __init__.py  test_injector.py
